--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Respect | القوانين الكاملة</title>
+    <title>Modern Respect</title>
+    <link rel="icon" type="image/png" href="https://i.ibb.co/Kpt2VkWh/1771339714738-5ea6ad8a-9690-41eb-8990-6fe5d37a9266.png">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
