--- a/index.html
+++ b/index.html
@@ -96,7 +96,47 @@
             <div class="sub-card"><h3>+ قوانين الحياة الجديدة - NLR +</h3><p>في حال اغمائك بشكل كامل لا يمكنك الكلام او الحركة. في حال تم انعاشك في العيادة الخاصة من شخص لديه عداوة معك لا تتذكر أي شيء حصل.</p></div>
             <div class="sub-card"><h3>+ الخوف على الحياة - NVL +</h3><p>عدم الخوف بشكل واقعي على حياتك عندما تتعرض للتهديد بالأسلحة يعتبر مخالفة كبرى.</p></div>
             <div class="sub-card"><h3>📌 شروط عامة</h3>
-                <p>✦ يمنع كتابة الاسم بالإنجليزي أو الرموز أو التشكيل أو اسم شخصية مشهورة.</p>
+                <p>✦ - القوانين -
+
+ 
+
++ القوانين العامة   +
+
+🧑🏾‍💼 القوانين العامة داخل السيرفر
+
+
+✦ ممنوع الاعتداء على البوتات (يعتبرون مواطنين).
+
+
+✦ ممنوع طلب تعويض عند خسارة أموالك أو أغراضك بسبب التحلل أو المستشفى.
+
+
+✦ ممنوع الكتابة خارج “الرول بلاي” في تطبيق تويتر، ويمكن الكتابة فقط في الأمور الداخلة في إطار التمثيل وتقمص الشخصيات والسيناريوهات والأمور المكملة لها.
+
+
+✦ لا يحق لك الدخول في أحداث كبيرة مثلا ( بيع وشراء ) إلا إذا كان بينكم معرفة رول بلاي لمدة لا تقل عن أسبوع.
+
+
+✦ يمنع القذف، الشتم، الطائفية، السياسة، الدين، أو القبلية (العقوبة: باند نهائي).
+
+
+✦ يمنع استخدام كلمات غير مفهومة، مشفرة، أو سب مبطن.
+
+
+✦ يمنع استغلال خدمات الجوال (مثل طلب تاكسي أو خدمات) بهدف الخطف أو القتل.
+
+
+✦ يمنع توزيع مبالغ مالية كبيرة (10 آلاف فأكثر) إلا إذا كان بينكم معرفة لا تقل عن أسبوع.
+
+
+✦ يمنع مشاركة أي من حساباتك أو معلوماتك الشخصية (سناب، إنستا، ستيم، ديسكورد... إلخ) مع أي شخص (العقوبة: باند نهائي).
+
+
+✦ يمنع حمل شخصين في نفس الوقت (حمل + سحب) مهما كانت الأسباب.
+
+
+
+ــــــــــــــــــــــــــــــــــــــــــــــــــ.</p>
                 <p>✦ يحق لك امتلاك شخصية واحدة فقط. للانتقال من إجرامية إلى عسكرية يجب مرور 20 يوم توقف عن الإجرام.</p>
                 <p>✦ يمنع القذف، الشتم، الطائفية، السياسة، أو الدين (العقوبة: باند نهائي).</p>
             </div>
