--- a/index.html
+++ b/index.html
@@ -100,39 +100,39 @@
 
  
 
-+ القوانين العامة   +
+ <p>+ القوانين العامة   +</p>
 
-🧑🏾‍💼 القوانين العامة داخل السيرفر
-
-
-✦ ممنوع الاعتداء على البوتات (يعتبرون مواطنين).
+ <p>🧑🏾‍💼 القوانين العامة داخل السيرفر</p>
 
 
-✦ ممنوع طلب تعويض عند خسارة أموالك أو أغراضك بسبب التحلل أو المستشفى.
+ <p>✦ ممنوع الاعتداء على البوتات (يعتبرون مواطنين).</p>
 
 
-✦ ممنوع الكتابة خارج “الرول بلاي” في تطبيق تويتر، ويمكن الكتابة فقط في الأمور الداخلة في إطار التمثيل وتقمص الشخصيات والسيناريوهات والأمور المكملة لها.
+ <p>✦ ممنوع طلب تعويض عند خسارة أموالك أو أغراضك بسبب التحلل أو المستشفى.</p>
 
 
-✦ لا يحق لك الدخول في أحداث كبيرة مثلا ( بيع وشراء ) إلا إذا كان بينكم معرفة رول بلاي لمدة لا تقل عن أسبوع.
+ <p>✦ ممنوع الكتابة خارج “الرول بلاي” في تطبيق تويتر، ويمكن الكتابة فقط في الأمور الداخلة في إطار التمثيل وتقمص الشخصيات والسيناريوهات والأمور المكملة لها.</p>
 
 
-✦ يمنع القذف، الشتم، الطائفية، السياسة، الدين، أو القبلية (العقوبة: باند نهائي).
+ <p>✦ لا يحق لك الدخول في أحداث كبيرة مثلا ( بيع وشراء ) إلا إذا كان بينكم معرفة رول بلاي لمدة لا تقل عن أسبوع.</p>
 
 
-✦ يمنع استخدام كلمات غير مفهومة، مشفرة، أو سب مبطن.
+ <p>✦ يمنع القذف، الشتم، الطائفية، السياسة، الدين، أو القبلية (العقوبة: باند نهائي).</p>
 
 
-✦ يمنع استغلال خدمات الجوال (مثل طلب تاكسي أو خدمات) بهدف الخطف أو القتل.
+ <p>✦ يمنع استخدام كلمات غير مفهومة، مشفرة، أو سب مبطن.</p>
 
 
-✦ يمنع توزيع مبالغ مالية كبيرة (10 آلاف فأكثر) إلا إذا كان بينكم معرفة لا تقل عن أسبوع.
+ <p>✦ يمنع استغلال خدمات الجوال (مثل طلب تاكسي أو خدمات) بهدف الخطف أو القتل.</p>
 
 
-✦ يمنع مشاركة أي من حساباتك أو معلوماتك الشخصية (سناب، إنستا، ستيم، ديسكورد... إلخ) مع أي شخص (العقوبة: باند نهائي).
+ <p>✦ يمنع توزيع مبالغ مالية كبيرة (10 آلاف فأكثر) إلا إذا كان بينكم معرفة لا تقل عن أسبوع.</p>
 
 
-✦ يمنع حمل شخصين في نفس الوقت (حمل + سحب) مهما كانت الأسباب.
+ <p>✦ يمنع مشاركة أي من حساباتك أو معلوماتك الشخصية (سناب، إنستا، ستيم، ديسكورد... إلخ) مع أي شخص (العقوبة: باند نهائي).</p>
+
+
+ <p>✦ يمنع حمل شخصين في نفس الوقت (حمل + سحب) مهما كانت الأسباب.</p>
 
 
 
