--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <section id="police" class="tab-content active">
         <div class="card">
-            <h2>قوانين الشرطة التفصيلية</h2>
+            <h2>قوانين الشرطة </h2>
             <div class="sub-card">
                 <h3>إيقاف الخدمات والمداهمات</h3>
                 <p>1 - يحق للضابط وما فوق برفع طلب إيقاف خدمات الى المحكمة لا يمكن تنفيذ إيقاف الخدمات الا من خلال حكم من المحكمة</p>
@@ -95,6 +95,8 @@
             <h2>قوانين السيرفر الأساسية</h2>
             <div class="sub-card"><h3>+ قوانين الحياة الجديدة - NLR +</h3><p>في حال اغمائك بشكل كامل لا يمكنك الكلام او الحركة. في حال تم انعاشك في العيادة الخاصة من شخص لديه عداوة معك لا تتذكر أي شيء حصل.</p></div>
             <div class="sub-card"><h3>+ الخوف على الحياة - NVL +</h3><p>عدم الخوف بشكل واقعي على حياتك عندما تتعرض للتهديد بالأسلحة يعتبر مخالفة كبرى.</p></div>
+              <div class="sub-card"><h3>+ power gaming - NLR +</h3><p>+ الباور جيمنج - PowerGaming   +
+استخدام الوسائل غير موجودة في اللعبة للحصول على ميزة أو عدم التوافق مع العالم بطريقة معقولة وبشكل واقعي ومنها التالي وهناك الكثير من المواقف والامثلة التي تندرج تحت Powergaming.</p></div>
             <div class="sub-card"><h3>📌 شروط عامة</h3>
                 <p>✦ - القوانين -
 
@@ -171,6 +173,7 @@
                 <div class="team-member"><span class="role">OWNER</span><div class="name">Abo Soltan</div></div>
                 <div class="team-member"><span class="role">C.E.O</span><div class="name">M5</div></div>
                 <div class="team-member"><span class="role">DEV</span><div class="name">Slex Yazeed</div></div>
+                <div class="team-member"><span class="role">Founder</span><div class="name">KB</div></div
             </div>
             <a href="https://discord.gg/DdChTEh3" class="discord-btn"><i class="fab fa-discord"></i> Join Our Discord</a>
         </div>
