--- a/index.html
+++ b/index.html
@@ -172,8 +172,9 @@
             <div class="team-grid">
                 <div class="team-member"><span class="role">OWNER</span><div class="name">Abo Soltan</div></div>
                 <div class="team-member"><span class="role">C.E.O</span><div class="name">M5</div></div>
-                <div class="team-member"><span class="role">DEV</span><div class="name">Slex Yazeed<span class="role">Founder</span><div class="name">KB</div></div>
-        
+                <div class="team-member"><span class="role">DEV</span><div class="name">Slex Yazeed</div></div>
+            <div class="team-member"><span class="role">Founder</span><div class="name">KB</div></div>
+
             </div>
             <a href="https://discord.gg/DdChTEh3" class="discord-btn"><i class="fab fa-discord"></i> Join Our Discord</a>
         </div>
