--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header>
         <img src="https://i.ibb.co/Kpt2VkWh/1771339714738-5ea6ad8a-9690-41eb-8990-6fe5d37a9266.png" alt="Modern Respect" class="logo">
         <h1>MODERN <span>RESPECT</span></h1>
-        <p>Hellp to Modern Respect</p>
+        <p>Hello to Modern Respect</p>
     </header>
 
     <div class="tabs">
