--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <h2>إدارة Modern Respect</h2>
             <div class="team-grid">
                 <div class="team-member"><span class="role">OWNER</span><div class="name">Abo Soltan</div></div>
-                <div class="team-member"><span class="role">C.E.O</span><div class="name">M5</div></div>
+                <div class="team-member"><span class="role">C.E.O & C.F.O</span><div class="name">M5</div></div>
                 <div class="team-member"><span class="role">DEV</span><div class="name">Slex Yazeed</div></div>
             <div class="team-member"><span class="role">Founder</span><div class="name">KB</div></div>
 
